chore: add endpoints and service methods to delete gym subscriptions