@@ -142,33 +142,26 @@ public class GymReadService {
                         az.fitnest.order.grpc.PackageNameInfo::getPackageId,
                         p -> p
                     ));
-                supportedSubscriptions = gym.getSubscriptions().stream().map(sub -> {
-                    az.fitnest.order.grpc.PackageNameInfo info = idToInfo.get(sub.getPackageId());
-                    String planId = sub.getPackageId() != null ? sub.getPackageId().toString() : "N/A";
-                    String packageName = info != null ? info.getName() : "Unknown";
-                    List<String> benefitsList = sub.getBenefits().stream()
-                        .map(az.fitnest.catalog.model.entity.GymSubscriptionBenefit::getBenefit)
-                        .toList();
-                    return GymPlanItemDto.builder()
-                        .plan_id(planId)
-                        .packageName(packageName)
-                        .benefits(benefitsList)
-                        .build();
-                }).collect(java.util.stream.Collectors.toList());
+                supportedSubscriptions = gym.getSubscriptions().stream()
+                    .filter(sub -> sub.getPackageId() != null)
+                    .filter(sub -> idToInfo.get(sub.getPackageId()) != null)
+                    .map(sub -> {
+                        az.fitnest.order.grpc.PackageNameInfo info = idToInfo.get(sub.getPackageId());
+                        String planId = sub.getPackageId().toString();
+                        String packageName = info.getName();
+                        List<String> benefitsList = sub.getBenefits().stream()
+                            .map(az.fitnest.catalog.model.entity.GymSubscriptionBenefit::getBenefit)
+                            .toList();
+                        return GymPlanItemDto.builder()
+                            .plan_id(planId)
+                            .packageName(packageName)
+                            .benefits(benefitsList)
+                            .build();
+                    })
+                    .collect(java.util.stream.Collectors.toList());
             }
         } catch (Exception e) {
             System.err.println("Could not fetch supported subscriptions from order-service: " + e.getMessage());
-            if (gym.getSubscriptions() != null) {
-                supportedSubscriptions = gym.getSubscriptions().stream().map(sub -> {
-                    String planId = sub.getPackageId() != null ? sub.getPackageId().toString() : "N/A";
-                    String placeholderName = "Standard Plan";
-                    return GymPlanItemDto.builder()
-                        .plan_id(planId)
-                        .packageName(placeholderName)
-                        .benefits(sub.getBenefits().stream().map(az.fitnest.catalog.model.entity.GymSubscriptionBenefit::getBenefit).toList())
-                        .build();
-                }).collect(java.util.stream.Collectors.toList());
-            }
         }
         GymDetailResponse response = GymDetailResponse.builder()
                 .gym_id(gym.getId().toString())
